@@ -22,9 +22,11 @@ http://trac.transmissionbt.com/query?group=component&milestone=1.30
 1.22 (2008/06/13)
 http://trac.transmissionbt.com/query?group=component&milestone=1.22
 - All Platforms
-  + Fix two separate BitTorrent unchoke bugs that could affect performance.
+  + Fix two separate BitTorrent unchoke bugs that could affect performance
   + Transmission now builds correctly on Sun Studio
   + Minor man page fixes
+- Mac
+  + Fix bug where "Program Started" in the Statistics window would always display as 0
 - GTK+
   + Fix crash when quitting while the stats window is still up
   + Added Latvian, Malayalam, Serbian, and Telugu translations
